--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "earthstar": "^5.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-earthstar": "^1.0.0-preview.15",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
