--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "earthstar": "^5.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-earthstar": "^1.0.0-preview.17",
+    "react-earthstar": "^1.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
