--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-linkify": "^1.0.0",
     "date-fns": "^2.16.1",
     "earthstar": "^5.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-earthstar": "^1.0.3",
+    "react-linkify": "^1.0.0-alpha",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
