--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-linkify": "^1.0.0",
     "date-fns": "^2.16.1",
-    "earthstar": "^5.7.4",
+    "earthstar": "5.7.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-earthstar": "^1.0.3",
+    "react-earthstar": "^1.1.1",
     "react-linkify": "^1.0.0-alpha",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
